Fix overflowx bug for mobile and remove header for small screen sizes

--- a/css/main.css
+++ b/css/main.css
@@ -818,6 +818,11 @@ td, th {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
+@media all and (max-width: 300px) {
+  #header-title {
+    display: none;
+  }
+}
 .main-menu {
   padding-bottom: 20px;
   padding-top: 20px;
